# executor

./: .gitignore  CHANGELOG.md  CMakeLists.txt  DartConfiguration.tcl  LICENSE  README.md  README_zh.md  test_simple  test_simple.cpp
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: c-cpp.yml  docs.yml
cmake/: CompilerWarnings.cmake  Coverage.cmake  ExecutorConfig.cmake  Sanitizers.cmake  executorConfig.cmake
docs/: API.md  BUILD.md  COVERAGE.md  MIGRATION.md  PACKAGE_DEB.md  PACKAGE_LINUX.md  PACKAGE_WINDOWS.md  RELEASE_CHECKLIST.md
docs/design/: blocking_io_executor.md  comm_facade.md  cpp-project-design.md  executor.md  gpu_executor.md  lockfree_user_api.md  safety_net_design.md  user_guide_website.md
docs/optimization/: BASELINE_RESULTS.md  OPTIMIZATION_ROADMAP.md  P0-1_LOCKFREE_REALTIME.md  PERFORMANCE_OPTIMIZATION.md  gpu_queue_benchmark.json  monitoring_sampling_implementation.md  realtime_precision_linux.json  realtime_precision_windows.json  submit_lock_optimization_analysis.md  submit_lock_removed.json  timer_precision_v0.1.0-5.1.json  v0.1.0-1.1.json  v0.1.0-2.1.json  v0.1.0-3.1-before.json  v0.1.0-3.1.json  v0.1.0-4.2-before.json  v0.1.0-4.2.json  v0.1.0-5.2.json  v0.1.0-6.1.json  v0.1.0.json  worker_local_queue_baseline.json  worker_local_queue_lockfree.json
docs/performance/: batch_submit_baseline_2026-03-13.json  batch_submit_baseline_2026-07-09.json  gpu_performance_optimization_report.md  lockfree_batch_operations_results.md  lockfree_cas_backoff_optimized_results.md  lockfree_cas_backoff_results.md  lockfree_false_sharing_fix_results.md  lockfree_memory_layout_analysis.md  lockfree_mpsc_analysis.md  lockfree_mpsc_baseline.json  lockfree_task_executor_baseline.md
docs/setup/: opencl_setup.md
docs/todolists/: blocking_io_executor_update_plan.md  comm_facade_update_plan.md  facade_observability_update_plan.md  gpu_todolist.md  lockfree_queue_optimization.md  safety_net_todolist.md  todolist.md  user_guide_website_plan.md
examples/: CMakeLists.txt  basic_submit.cpp  batch_submit_example.cpp  comm_robot_pipeline.cpp  failure_observability.cpp  gpu_basic.cpp  gpu_device_query.cpp  gpu_multi_device.cpp  gpu_opencl.cpp  gpu_unified_memory.cpp  lockfree_task_executor_example.cpp  monitor_example.cpp  monitoring_sampling_example.cpp  multi_project.cpp  periodic_monitoring.cpp  realtime_can.cpp
examples/tutorial/: 01_first_task.cpp  02_priority.cpp  03_delayed_periodic.cpp  04_batch.cpp  05_dependencies.cpp  06_observability.cpp  07_realtime.cpp  08_communication.cpp  09_gpu.cpp  10_service_data_import.cpp  11_task_inputs.cpp  12_blocking_io_worker.cpp  CMakeLists.txt  README.md
include/executor/: blocking_io.hpp  comm.hpp  config.hpp  executor.hpp  executor_manager.hpp  interfaces.hpp  lockfree_task_executor.hpp  types.hpp
scripts/: build_and_package_deb.sh  build_and_package_linux.sh  build_and_package_windows.ps1  build_linux.sh  build_windows.ps1  package_deb.sh  package_linux.sh  package_windows.ps1  run_coverage.sh
src/: CMakeLists.txt
src/executor/: blocking_io_executor.cpp  blocking_io_executor.hpp  executor.cpp  executor_manager.cpp  lockfree_task_executor.cpp  realtime_thread_executor.cpp  realtime_thread_executor.hpp  thread_pool_executor.cpp  thread_pool_executor.hpp
src/executor/gpu/: cuda_executor.cpp  cuda_executor.hpp  cuda_loader.cpp  cuda_loader.hpp  device_query.cpp  gpu_memory_manager.cpp  gpu_memory_manager.hpp  gpu_scheduler.cpp  kernel_launch_optimizer.cpp  opencl_executor.cpp  opencl_executor.hpp  opencl_loader.cpp  opencl_loader.hpp  task_scheduler_optimizer.cpp  transfer_optimizer.cpp
src/executor/monitor/: statistics_collector.cpp  statistics_collector.hpp  task_monitor.cpp  task_monitor.hpp
src/executor/task/: task.cpp  task.hpp  task_dependency_manager.cpp  task_dependency_manager.hpp
src/executor/thread_pool/: load_balancer.cpp  load_balancer.hpp  lockfree_worker_queue.hpp  priority_scheduler.cpp  priority_scheduler.hpp  task_dispatcher.cpp  task_dispatcher.hpp  thread_pool.cpp  thread_pool.hpp  thread_pool_resizer.cpp  thread_pool_resizer.hpp  worker_local_queue.cpp  worker_local_queue.hpp
src/executor/util/: exception_handler.cpp  exception_handler.hpp  lockfree_queue.hpp  thread_utils.cpp  thread_utils.hpp  timer_period_guard.cpp  timer_period_guard.hpp
src/util/: object_pool.hpp
tests/: CMakeLists.txt  analyze_memory_layout.cpp  benchmark_adaptive_backoff.cpp  benchmark_baseline.cpp  benchmark_batch_minimal.cpp  benchmark_batch_operations.cpp  benchmark_batch_scales.cpp  benchmark_batch_simple.cpp  benchmark_batch_submit.cpp  benchmark_batch_submit_baseline.cpp  benchmark_batch_submit_comparison.cpp  benchmark_batch_submit_concurrent.cpp  benchmark_batch_submit_real.cpp  benchmark_lockfree_mpsc.cpp  benchmark_lockfree_mpsc_full  benchmark_lockfree_mpsc_full.cpp  benchmark_lockfree_realtime.cpp  benchmark_lockfree_task_executor.cpp  benchmark_optimization_baseline.cpp  benchmark_realtime_precision.cpp  benchmark_timer_precision.cpp  mock_cycle_manager.hpp  test_api_doc_realtime_affinity_round_robin_mentions_current_behavior.cpp  test_api_doc_status_fields.cpp  test_batch_integration.cpp  test_batch_no_future.cpp  test_blocking_io_executor.cpp  test_blocking_io_types.cpp  test_comm_channel.cpp  test_comm_double_buffer.cpp  test_comm_mailbox.cpp  test_comm_observability.cpp  test_comm_phase_gate.cpp  test_comm_types.cpp  test_concurrent_stop_submit.cpp  test_cuda_executor.cpp  test_cuda_executor_concurrent_stop.cpp  test_cuda_status_records_last_error.cpp  test_cuda_stream_destroy_race.cpp  test_cycle_manager_integration.cpp  (+79 more)
tests/harness/: interleaving_harness.hpp  operation_history.hpp  test_comm_facade_usage.cpp  test_comm_harness_foundation.cpp
tests/util/: CMakeLists.txt  test_lockfree_mpsc_arm_stress.cpp
website/: .gitignore  404.md  README.md  decisions.md  index.md  maintenance.md  package-lock.json  package.json  translation-status.md
website/.vitepress/: config.mjs
website/en/: decisions.md  index.md  maintenance.md
website/en/gpu/: index.md  (+3 more)
website/scripts/: check-site.mjs
(+100 files in other folders)
